--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ConnectorFragment">
+    tools:context=".StartFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -28,6 +28,7 @@
             android:background="@null"
             android:cursorVisible="false"
             android:enabled="false"
+            android:focusable="false"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="Account"
+        android:focusedByDefault="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -60,6 +62,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email_field"
+            android:focusedByDefault="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -77,6 +80,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_field"
             android:inputType="textPassword"
+            android:focusedByDefault="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
