--- a/app/src/main/res/layout/run_fragment.xml
+++ b/app/src/main/res/layout/run_fragment.xml
@@ -56,4 +56,18 @@
                 android:textColor="#FFF"
                 android:textSize="18sp"/>
     </RelativeLayout>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:orientation="vertical">
+        <TextView
+                android:id="@+id/version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/current_version"/>
+    </LinearLayout>
+
 </LinearLayout>
