--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -20,9 +20,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:paddingTop="24dp"
-                android:text="Initializing"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/colorPrimaryDark">
+                android:textColor="@color/colorPrimaryDark"
+                tools:text="@string/initializing">
 
         </TextView>
 
