--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="fill_parent"
-              android:orientation="vertical"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context=".SigninFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".SigninFragment">
 
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -23,9 +23,9 @@
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_field"
-                android:focusedByDefault="false"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:focusedByDefault="false" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -40,10 +40,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_field"
-                android:inputType="textPassword"
-                android:focusedByDefault="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:focusedByDefault="true"
+                android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RelativeLayout
@@ -62,7 +62,7 @@
                 android:focusable="true"
                 android:text="@string/signin"
                 android:textColor="#FFF"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -81,7 +81,7 @@
                 android:focusable="true"
                 android:text="@string/service_request"
                 android:textColor="#FFF"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -90,11 +90,12 @@
             android:layout_marginTop="130dp"
             android:gravity="center"
             android:orientation="vertical">
+
         <TextView
                 android:id="@+id/version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/current_version"/>
+                android:text="@string/current_version" />
     </RelativeLayout>
 
 </LinearLayout>
